# clap-sys

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: gain.rs
src/: audio_buffer.rs  chmap.rs  color.rs  entry.rs  events.rs  fixedpoint.rs  hash.rs  host.rs  id.rs  lib.rs  plugin.rs  plugin_factory.rs  plugin_features.rs  plugin_invalidation.rs  process.rs  stream.rs  string_sizes.rs  version.rs
src/converters/: clap_converter.rs  mod.rs  vst2_converter.rs  vst3_converter.rs
src/ext/: ambisonic.rs  audio_ports.rs  audio_ports_activation.rs  audio_ports_config.rs  configurable_audio_ports.rs  context_menu.rs  event_filter.rs  event_registry.rs  fd_support.rs  gui.rs  gui_cocoa.rs  gui_free_standing.rs  gui_win32.rs  gui_x11.rs  latency.rs  log.rs  mod.rs  note_name.rs  note_ports.rs  param_indication.rs  params.rs  posix_fd_support.rs  preset_load.rs  remote_controls.rs  render.rs  state.rs  state_context.rs  surround.rs  tail.rs  thread_check.rs  thread_pool.rs  timer_support.rs  track_info.rs  voice_info.rs
src/ext/draft/: ambisonic.rs  audio_ports_activation.rs  check_for_update.rs  configurable_audio_ports.rs  context_menu.rs  cv.rs  extensible_audio_ports.rs  file_reference.rs  midi_mappings.rs  mod.rs  param_indication.rs  preset_load.rs  quick_controls.rs  remote_controls.rs  resource_directory.rs  state_context.rs  surround.rs  track_info.rs  transport_control.rs  triggers.rs  tuning.rs  undo.rs  voice_info.rs
src/factory/: mod.rs  plugin_factory.rs  preset_discovery.rs
src/factory/draft/: mod.rs  plugin_invalidation.rs  (+2 more)
