[package]
name = "clap-sys"
version = "0.2.0"
rust-version = "1.59"
authors = ["Micah Johnston <micah@glowcoil.com>", "Robbert van der Helm <mail@robbertvanderhelm.nl"]
edition = "2021"
description = "Rust bindings for the CLAP audio plugin API"
repository = "https://github.com/glowcoil/clap-sys"
readme = "README.md"
license = "MIT/Apache-2.0"

[dependencies]
